# emekoi.github.io

./: .ghci  .gitignore  .latexmkrc  .stylish-haskell.yaml  Blog.hs  LICENSE  Ninja.hs  blog.cabal  cabal.project  cabal.project.freeze  hie.yaml  site.hs
.github/workflows/: deploy.yml
Blog/: Agda.hs  Config.hs  MMark.hs  Ninja.hs  Pandoc.hs  Shake.hs  Slug.hs  Template.hs  Type.hs  Util.hs  Utils.hs
Site/: Config.hs  Pandoc.hs  Slug.hs  Utils.hs
bib/: ref.bib
css/: agda.css  custom.css  default.css  fira_code.css  flexoki.css  highlighting.css  normalize.css  noscript.css  sakura.css
drafts/: .stylish-haskell.yaml  pattern-matching-for-great-good.lhs
drafts/complete-and-easy/: Index.lhs  easy.cabal
drafts/effects-in-150-lines/: .hlint.yaml  .stylish-haskell.yaml  Index.lhs  effects.cabal
drafts/pattern-matching/: .stylish-haskell.yaml  Core.hs  Elab.hs  Error.hs  Index.lhs  Lang.hs  Lexer.x  Main.hs  Orphans.hs  Parser.hs  Parser.y  Sema.hs  Util.hs  cabal.project  cabal.project.freeze  example.pat  index.md  pattern-matching.cabal  pattern.cabal  project.cabal
drafts/row-poly/: Error.hs  Infer.hs  Main.hs  Parser.hs  Poly.hs  Syntax.hs  Unify.hs  Util.hs  cabal.project.freeze  index.md  rows.cabal
drafts/row-poly/tests/: basic.txt
pages/: 404.md  bibliography.md  feed.json  feed.xml  index.md  notes.md  posts.md  publications.json  tags.md
posts/: hie.yaml
resume/: .gitignore  .latexmkrc  latexmkrc  resume.sty  resume.tex
scripts/: deploy-page  title-slug
site/: Config.hs  Pandoc.hs  Slug.hs  Utils.hs
src/: Config.hs  Utils.hs
static/: 0B81A91D60C23D68.asc
templates/: agda-page.html.mustache  atom-item.xml  atom-item.xml.mustache  atom.xml  color-scheme-load.html  color-scheme-load.js.mustache  color-scheme-toggle.html  color-scheme-toggle.js.mustache  default.html  default.html.mustache  feed-item.json  feed-item.json.mustache  feed.json  footer.html.mustache  header.html.mustache  katex-load.js.mustache  page-footer.html  page-footer.html.mustache  page-header.html  page.html.mustache  post-list.html  post-list.html.mustache  post-list.md.mustache  post.html  post.html.mustache
