cabal-version:      3.0

author:             Emeka Nkurumeh
build-type:         Simple
homepage:           https://emekoi.github.io
license:            BSD-3-Clause
maintainer:         emekankurumeh@outlook.com
name:               easy
version:            0.1.0.0

common base
  ghc-options: -Wall -Wcompat -Wextra -Widentities -Wno-name-shadowing -fsplit-sections
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DeriveFunctor
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    TypeFamilies
    ViewPatterns

  build-depends:
    , base               ^>= 4.19
    , bytestring         ^>= 0.12
    , containers         ^>= 0.6
    , megaparsec         ^>= 9.6
    , parser-combinators ^>= 1.3
    , text               ^>= 2.1
    , transformers       ^>= 0.6

executable easy
  import:             base
  main-is:            Index.lhs
  build-tool-depends: markdown-unlit:markdown-unlit ^>= 0.6
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -main-is Index -pgmL markdown-unlit
