cabal-version:      3.0

author:             Emeka Nkurumeh
build-type:         Simple
homepage:           https://emekoi.github.io
license:            BSD-3-Clause
maintainer:         emekankurumeh@outlook.com
name:               pattern-matching
version:            0.1.0.0

common base
  ghc-options: -Wall -Wcompat -Wextra -Widentities -Wno-name-shadowing -fsplit-sections
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns
  build-depends:
    , array ^>= 0.5
    , base ^>= 4.18
    , bytestring ^>= 0.11
    , containers ^>= 0.6
    , diagnose ^>= 2
    , microlens ^>= 0.4
    , mtl ^>= 2.3
    , prettyprinter ^>= 1.7
    , text ^>= 2.0
    , transformers ^>= 0.6

executable pattern-matching
  import: base
  build-tool-depends:
    , alex:alex ^>= 3.4
    , happy:happy ^>= 1.20
    , markdown-unlit:markdown-unlit
  main-is: Main.hs
  other-modules:
    Lexer
    Parser
    Sema
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -pgmL markdown-unlit
