cabal-version:      3.0

author:             Emeka Nkurumeh
build-type:         Simple
homepage:           https://emekoi.github.io
license:            BSD-3-Clause
maintainer:         emekankurumeh@outlook.com
name:               pattern
version:            0.1.0.0

flag json
  description: enable json dumping
  default:     False

common base
  ghc-options: -Wall -Wcompat -Wextra -Widentities -Wno-name-shadowing -fsplit-sections
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DeriveFunctor
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    TypeFamilies
    ViewPatterns

  build-depends:
    , base               ^>= 4.19
    , bytestring         ^>= 0.12
    , containers         ^>= 0.6
    , megaparsec         ^>= 9.6
    , microlens          ^>= 0.4
    , microlens-ghc      ^>= 0.4
    , mtl                ^>= 2.3
    , parser-combinators ^>= 1.3
    , text               ^>= 2.1
    , text-short         ^>= 0.1
    , transformers       ^>= 0.6
    -- , witherable         ^>= 0.5

  if flag(json)
    cpp-options: -DENABLE_JSON
    build-depends: aeson ^>= 2.2

executable pattern
  import:      base
  main-is:     Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -main-is Main
  other-modules:
    Parser
    Lang

  if flag(json)
    other-modules: Orphans
