cabal-version:      3.0

author:             Emeka Nkurumeh
build-type:         Simple
homepage:           https://emekoi.github.io
license:            BSD-3-Clause
maintainer:         emekankurumeh@outlook.com
name:               pattern
version:            0.1.0.0

common base
  ghc-options: -Wall -Wcompat -Wextra -Widentities -Wno-name-shadowing -fsplit-sections
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DerivingVia
    DuplicateRecordFields
    GADTs
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    TupleSections
    TypeFamilies
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving
    GeneralizedNewtypeDeriving
    DeriveFunctor
    DeriveTraversable
    ViewPatterns

  build-depends:
    , base               ^>= 4.19
    , containers         ^>= 0.6
    , microlens          ^>= 0.4
    , microlens-ghc      ^>= 0.4
    , text               ^>= 2.1
    , text-short         ^>= 0.1
    , transformers       ^>= 0.6
    , witherable         ^>= 0.4
    , megaparsec
    , parser-combinators
    , mtl

executable pattern
  import:      base
  main-is:     Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -main-is Main
  other-modules:
    Parser
    Lang
